# axis-control-engine

./: .gitignore  CMakeLists.txt  MODULES.md  PROTOCOL_REFERENCE.md  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
ace/axis/: README.md  axis_manager.cpp  axis_manager.hpp
ace/communication/: README.md  alp.cpp  alp.hpp  command_ids.hpp  command_protocol.hpp  message_models.hpp
ace/config/: README.md  config.hpp  device_config.hpp  persistent_storage.cpp  persistent_storage.hpp  persistent_storage_interface.hpp
ace/control/: README.md  controller.cpp  controller.hpp  sensor_fusion.cpp  sensor_fusion.hpp
ace/diagnostics/: README.md  diagnostics.cpp  diagnostics.hpp
ace/drivers/: README.md  encoder.cpp  encoder.hpp
ace/geometry/: target_geometry.cpp  target_geometry.hpp
ace/hal/: README.md  hal.cpp  hal.hpp
ace/motion/: README.md  motion_planner.cpp  motion_planner.hpp
ace/protocol/: README.md  protocol_dispatcher.hpp
ace/safety/: README.md  safety_manager.cpp  safety_manager.hpp
ace/scheduler/: README.md  scheduler.cpp  scheduler.hpp
ace/services/: README.md  logger.cpp  logger.hpp
ace/telemetry/: README.md  telemetry_publisher.cpp  telemetry_publisher.hpp
ace/tests/: README.md  mock_test_motion.cpp  test_axis_manager.cpp  test_controller.cpp  test_geometry.cpp  test_safety_manager.cpp  test_sensor_fusion.cpp  test_telemetry.cpp
components/ace_core/: CMakeLists.txt
docs/: ACE_PRD.md
main/: CMakeLists.txt  app_main.cpp
